...
    };
  });

  return (
    <View style={styles.container}>
      <View style={styles.headerContainer}>
        <Text style={styles.title}>My Cards</Text>
        {noOfCards < MAX_NO_OF_CARDS && (
          <Button
            mode="text"
            onPress={showForm ? handleCardSaved : handleAddPress}
            labelStyle={styles.addButton}>
            {showForm ? 'Discard' : '+ Add'}
          </Button>
        )}
      </View>
      <Animated.View style={[formAnimatedStyle]}>
        <AddCreditCard onCardSaved={handleCardSaved} />
      </Animated.View>
...
